--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=        com.mysql.cj.jdbc.Driver
 spring.datasource.url=                      jdbc:mysql://localhost:3306/aspire_person_db
 spring.datasource.username=                 root
 spring.datasource.password=                 admin
+spring.jpa.hibernate.ddl-auto=              create-drop
+spring.jpa.show-sql=                        true
